- Ability to create a booking - Ability to create multiple match slots and pitch slots from booking - Refactored pitch timeslots api to include pitch and timeslot details
