# docs/swagger.json
@@ -2011,6 +2011,13 @@
                         "name": "venueId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pitch ID",
+                        "name": "pitchId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2216,6 +2223,47 @@
                     }
                 }
             }
+        },
+        "/venues/{venueId}/timeslots/{pitchTimeslotId}/pitch": {
+            "get": {
+                "description": "Get pitch info by venue and time slot",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "venue"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Venue ID",
+                        "name": "venueId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pitch Time slot ID",
+                        "name": "pitchTimeslotId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pitch"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -2346,6 +2394,9 @@
                 "cost": {
                     "type": "number"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "maxPlayers": {
                     "type": "integer"
                 },
@@ -2353,9 +2404,6 @@
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 3
-                },
-                "pitchId": {
-                    "type": "integer"
                 },
                 "venueId": {
                     "type": "integer"
@@ -2459,37 +2507,31 @@
         "payloads.BookingRequest": {
             "type": "object",
             "required": [
-                "day",
-                "endTime",
-                "matchAccessStatusId",
+                "matchDate",
+                "matchType",
                 "noOfWeeks",
-                "pitchId",
-                "startTime",
+                "payment",
+                "pitchTimeSlotId",
                 "venueId"
             ],
             "properties": {
-                "day": {
-                    "type": "string",
-                    "maxLength": 10,
-                    "minLength": 3
-                },
-                "endTime": {
+                "matchDate": {
                     "type": "string"
                 },
-                "matchAccessStatusId": {
-                    "type": "integer"
+                "matchType": {
+                    "type": "string"
                 },
                 "noOfWeeks": {
                     "type": "integer"
                 },
-                "pitchId": {
+                "payment": {
+                    "type": "string"
+                },
+                "pitchTimeSlotId": {
                     "type": "integer"
                 },
                 "squadId": {
                     "type": "integer"
-                },
-                "startTime": {
-                    "type": "string"
                 },
                 "venueId": {
                     "type": "integer"
